# mini_codex

./: .gitignore  DESIGN.md  README.md  README_zh.md  agent.py  approval.py  config.py  history.py  job_search.py  llm_client.py  main.py  main_noplan.py  pyproject.toml  tools.py
contextengineering/: compression.py
coreagent/: agent.py
models/: llm_client.py
sessionsDB/: history.py
tools/: approval.py
